Fri Jul 12 11:26:25 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_reject_bang): do not call rb_hash_foreach() if RHash
	  has ntbl and it is empty.

Fri Jul 12 11:17:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (recursive_hash): use RHASH_SIZE() to check hash size.

Fri Jul 12 00:20:00 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_size): use RHASH_SIZE().

Fri Jul 12 00:08:24 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_values): set array capa to RHASH_SIZE().

Thu Jul 11 23:54:45 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_keys): set array capa to RHASH_SIZE().

Thu Jul 11 21:30:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_pow): undef pow to get rid of infinite
	  recursive call.  re-fix [Bug #8495].  [ruby-core:55923] [Bug #8621]

Thu Jul 11 20:18:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Win32::Registry::API#make_wstr):
	  remove workaround to append WCHAR terminator.

	* transcode.c (str_encode_associate): fill terminator after conversion.

	* string.c (rb_enc_str_new, rb_str_set_len, rb_str_resize): fill
	  minimum length of the encoding as the terminator.

	* string.c (str_buf_cat, rb_str_buf_append, rb_str_splice_0): ditto.

	* string.c (str_make_independent_expand, rb_str_modify_expand): make
	  the capacity enough for multi-byte terminator.

	* string.c (rb_string_value_cstr): fill minimum length of the encoding
	  as the terminator.

	* string.c (rb_string_value_cstr): check null char in char, not in
	  byte.

Thu Jul 11 14:48:35 2013  Zachary Scott  <e@zzak.io>

	* array.c: Replace confusing example for #reverse_each in overview
	  Patch by Earl St Sauver [Fixes documenting-ruby/ruby-12]
	  https://github.com/documenting-ruby/ruby/pull/12

Thu Jul 11 14:22:37 2013  Zachary Scott  <e@zzak.io>

	* test/drb/ut_eq.rb: Use localhost for drb tests [Bug #7311]